# aiq-quivers

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  demo_brauer_citaciones.ipynb  demo_citacion.ipynb  demo_temporal_validation.ipynb  paper_brauer_impact_entropy.ipynb  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
aiq/: __init__.py  automaton.py  brauer.py  datasets.py  gnn.py  impact.py  morphisms.py  path_algebra.py  quiver.py  scienti.py  validation.py  visualization.py
data/: canadas_citation_network.json
tests/: test_automaton.py  test_brauer.py  test_impact.py  test_morphisms.py  test_path_algebra.py  test_quiver.py  test_scienti.py
